--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nippon Study Center</title>
+    <meta name="description" content="Nippon Study Center - Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar, darslar va resurslar bilan yapon tilini o'rganing." />
+
+    <!-- Keywords -->
+    <meta name="keywords" content="yapon tili, o'quv markazi, yapon tilini o'rganish, online kurslar, yapon tili darslari" />
+
+    <!-- Author -->
+    <meta name="author" content="Nippon Study Center" />
+
+    <!-- Open Graph Tags for social media -->
+    <meta property="og:title" content="Nippon Study Center" />
+    <meta property="og:description" content="Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar va darslar bilan yapon tilini o'rganing." />
+    <meta property="og:image" content="/logo-1.png" /> <!-- Saytning tasvirini qo'shing -->
+    <meta property="og:url" content="https://www.nippon.com.uz/" /> <!-- Sayt URL manzilini qo'shing -->
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nippon Study Center" />
+    <meta name="twitter:description" content="Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar va darslar bilan yapon tilini o'rganing." />
+    <meta name="twitter:image" content="/logo-1.png" /> 
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <noscript>nippon</noscript>
+    <noscript>nippon.uz</noscript>
+    <noscript>nippon.com</noscript>
+    <noscript>yapon tili</noscript>
+    <noscript>yapon tili kurslari</noscript>
   </body>
 </html>
