--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo-123.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nippon Study Center</title>
     <meta name="description" content="Nippon Study Center - Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar, darslar va resurslar bilan yapon tilini o'rganing." />
