--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <meta name="twitter:title" content="Nippon Study Center" />
     <meta name="twitter:description" content="Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar va darslar bilan yapon tilini o'rganing." />
     <meta name="twitter:image" content="/logo-1.png" /> 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17459927667"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17459927667');
+</script>
   </head>
   <body>
     <div id="root"></div>
