--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo-123.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nippon Study Center</title>
+    <title>Nippon Study Center | Yapon </title>
     <meta name="description" content="Nippon Study Center - Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar, darslar va resurslar bilan yapon tilini o'rganing." />
 
     <!-- Keywords -->
