--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo-123.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nippon Study Center | Yapon </title>
+    <title>Nippon Study Center | Yapon</title>
     <meta name="description" content="Nippon Study Center - Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar, darslar va resurslar bilan yapon tilini o'rganing." />
 
     <!-- Keywords -->
@@ -16,8 +16,8 @@
     <!-- Open Graph Tags for social media -->
     <meta property="og:title" content="Nippon Study Center" />
     <meta property="og:description" content="Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar va darslar bilan yapon tilini o'rganing." />
-    <meta property="og:image" content="/logo-1.png" /> <!-- Saytning tasvirini qo'shing -->
-    <meta property="og:url" content="https://www.nippon.com.uz/" /> <!-- Sayt URL manzilini qo'shing -->
+    <meta property="og:image" content="/logo-1.png" />
+    <meta property="og:url" content="https://www.nippon.com.uz/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Tags -->
@@ -25,19 +25,22 @@
     <meta name="twitter:title" content="Nippon Study Center" />
     <meta name="twitter:description" content="Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar va darslar bilan yapon tilini o'rganing." />
     <meta name="twitter:image" content="/logo-1.png" /> 
+
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17459927667"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'AW-17459927667');
 </script>
+
+
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
     <noscript>nippon</noscript>
     <noscript>nippon.uz</noscript>
     <noscript>nippon.com</noscript>
