--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo-123.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nippon Study Center | Yapon</title>
+    <title>Nippon Study Center | Yapon tili markazi</title>
     <meta name="description" content="Nippon Study Center - Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar, darslar va resurslar bilan yapon tilini o'rganing." />
 
     <!-- Keywords -->
@@ -27,13 +27,14 @@
     <meta name="twitter:image" content="/logo-1.png" /> 
 
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17459927667"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'AW-17459927667');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17459927667"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'AW-17459927667');
+    </script>
 
 
   </head>
