--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/logo-123.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nippon Study Center | Yapon tili markazi</title>
+    <meta name="description" content="Nippon.uz - Yapon tilini N5 dan N1 gacha o‘rganing, Yaponiyada o‘qish, ish va viza olish xizmatlari.">
+<meta name="keywords" content="yapon tili kurslari, N5, N4, N3, N2, N1, yapon tilini o‘rganish, yaponiyada o‘qish, ishchi viza, talaba viza, grant, hujjat topshirish">
+
     <meta name="description" content="Nippon Study Center - Yapon tilini o'rganish uchun eng yaxshi o'quv markazi. Kurslar, darslar va resurslar bilan yapon tilini o'rganing." />
 
     <!-- Keywords -->
